# lark-claudecode-bridge

./: .env.example  IMPLEMENTATION_PROGRESS.md  LICENSE  README-CODEX.md  README.md  TROUBLESHOOTING.md  agent_hub.py  bot_config.py  claude_runner.py  main.py  migrate_sessions.py  pyproject.toml  run_control.py  session_store.py
deploy/: feishu-claude.plist  lark-claude.plist  lark-codex.plist
docs/: lark-skills-setup.md
docs/superpowers/specs/: 2026-03-15-message-stability-and-group-support-design.md
tests/: test_group_chat.py  test_session_store.py
