[project]
name = "lark-agents-bridge"
version = "0.1.0"
description = "Bridge local coding agents with Feishu/Lark via WebSocket"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "lark-agents-bridge contributors" },
]
dependencies = [
    "lark-oapi>=1.3.0",
    "python-dotenv>=1.0.0",
]
